--- a/fundamentals1.html
+++ b/fundamentals1.html
@@ -29,7 +29,7 @@ array of the parameter’s factors. Then, for each factor, f, a circle is drawn 
         }
         return array;
       }
-    //factors.method(200);
+    factors.method(24);
     for(let radius of array){
       d3.select("#chart")
         .append("circle")
