--- a/fundamentals2.html
+++ b/fundamentals2.html
@@ -2,14 +2,13 @@
 <!-- Displays 9 circles with their centers separated by 100px horizontally, and each circle has a unique radius. After 2 seconds, the display rearranges the circles so that they are in size order from smallest to largest.-->
 <html>
 <body>
-  <svg id="chart" width="1000" height="300"></svg>
+  
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <script>
 	const array = [92, 56, 14, 73, 22, 38, 93, 45, 55];
-
+	var svg = d3.select("body").append("svg").attr("width", 1000).attr("height", 300);
 	array.forEach(function(num, i, array){
-		d3.select("#chart")
-	  	  .append("circle")
+		svg.append("circle")
 	  	  .attr("r", num/2)
 	  	  .attr("cx", (100*i)+50) 
 		  .attr("cy", 50)
@@ -18,7 +17,7 @@
 	})
 
     setTimeout(function() {
-		d3.select("#chart").selectAll("circle")
+		svg.selectAll("circle")
 			.data(array.sort())
 			.transition().duration(1500)
 	  		.attr("r", d=>d/2) 
